[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
slog = "2.7"
slog-term = "2.9"
slog-async = "2.7"
thiserror = "1.0"
async-stream = "0.3"
processor = { path = "../pkgs/core/processor" }
executer = { path = "../pkgs/core/executer"}
terraform = { path = "../pkgs/terraform"}
provider = { path = "../pkgs/core/provider" }


[dev-dependencies]
tokio-test = "0.4"