[package]
name = "executer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
slog = "2.7"
slog-term = "2.9"
slog-async = "2.7"
thiserror = "2.0.9"
async-stream = "0.3"
tokio-stream = "0.1"
processor = { path = "../processor" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14.0"